<resources>
    <string name="app_name">Gabby\'s Mech Keebs</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="welcome_to_gmk">Welcome to Gabby\'s Mech Keebs!</string>
    <string name="register">Register</string>
    <string name="password_requirement">Password must be at least 6 characters long.</string>
    <string name="already_registered">Already registered? Click Here!</string>
    <string name="new_user_sign_up_here">New User? Sign Up Here!</string>
    <string name="browse_items">Browse Items</string>
    <string name="admin">Admin</string>
    <string name="sign_out">Sign Out</string>
    <string name="view_cart">View Cart</string>
    <string name="search_items">Search Items</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="view_all_users">View All Users</string>
    <string name="view_existing_items">View Existing Items</string>
    <string name="modify_item">Modify Item</string>
    <string name="delete_item">Delete Item</string>
    <string name="add_item">Add Item</string>
    <string name="hello_admin">Hello Admin</string>
    <string name="delete_account">Delete Account</string>
    <string name="number_of_attempts_remaining">Number of Attempts Remaining: 3</string>
    <string name="no_items_in_store">No Items In Store.</string>
    <string name="current_items_offered_at_gabby_s_mech_keebs">Current Items Offered At Gabby\'s Mech Keebs:</string>
    <string name="no_users_at_store">No Users at Store</string>
    <string name="all_products_are_for">All products are for 75% mechanical keyboards</string>
    <string name="sold_out">Sold Out :(</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="enter_item_description">Enter Item Description</string>
    <string name="enter_item_price">Enter Item Price</string>
    <string name="enter_item_stock">Enter Item Stock</string>
    <string name="add_item_to_cart">Add Item to Cart</string>
    <string name="enter_description_add_item">Enter Description</string>
    <string name="enter_price_add_item">Enter Price</string>
    <string name="enter_number_of_items">Enter Number of Items</string>
    <string name="enter_name">Enter Name</string>
    <string name="existing_users_at_gabby_s_mech_keebs">Existing Users at Gabby\'s Mech Keebs:</string>
    <string name="welcome">Welcome</string>
    <string name="enter_desired_item">Enter desired item</string>
    <string name="username_s_cart">*username*\'s Cart:</string>
    <string name="line_1">Line 1</string>
    <string name="line_2">Line 2</string>
    <string name="line_3">Line 3</string>
</resources>