<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_1"
    tools:context=".adminActivities.AdminActivity">

    <TextView
        android:id="@+id/textViewHelloAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_admin"
        android:textColor="@color/darkPurple"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127" />

    <Button
        android:id="@+id/buttonAddItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/add_item"
        android:textColor="#332847"
        android:theme="@style/Theme.Project2GMK"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonDeleteItem"
        app:layout_constraintStart_toStartOf="@+id/buttonDeleteItem"
        app:layout_constraintTop_toBottomOf="@+id/textViewHelloAdmin"
        app:layout_constraintVertical_bias="0.036" />

    <Button
        android:id="@+id/buttonDeleteItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="432dp"
        android:text="@string/delete_item"
        android:textColor="#332847"
        android:theme="@style/Theme.Project2GMK"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonModifyItem"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/buttonModifyItem"
        app:layout_constraintTop_toBottomOf="@id/buttonAddItem"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonModifyItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/modify_item"
        android:textColor="#332847"
        android:theme="@style/Theme.Project2GMK"
        app:layout_constraintEnd_toEndOf="@+id/buttonViewExistingItems"
        app:layout_constraintStart_toStartOf="@+id/buttonViewExistingItems"
        app:layout_constraintTop_toBottomOf="@+id/buttonDeleteItem" />

    <Button
        android:id="@+id/buttonViewExistingItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:text="@string/view_existing_items"
        android:textColor="#332847"
        android:theme="@style/Theme.Project2GMK"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonViewAllUsers"
        app:layout_constraintStart_toStartOf="@+id/buttonViewAllUsers"
        app:layout_constraintTop_toBottomOf="@+id/buttonModifyItem"
        app:layout_constraintVertical_bias="0.018" />

    <Button
        android:id="@+id/buttonViewAllUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:text="@string/view_all_users"
        android:textColor="#332847"
        android:theme="@style/Theme.Project2GMK"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonViewExistingItems"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>