<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    tools:context=".adminActivities.AdminAddItemActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewItemsDisplay"
        android:layout_width="379dp"
        android:layout_height="342dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fadeScrollbars="true"
        android:scrollbars="vertical"
        android:text="@string/app_name"
        android:textColor="#332847"
        android:textColorHint="@color/black"
        android:textColorLink="@color/slightlyDarkerOrange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextItemDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_description_add_item"
        android:inputType="textLongMessage|textShortMessage"
        android:textColor="#332847"
        android:textColorHint="@color/black"
        android:textCursorDrawable="@drawable/cursor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextItemPrice" />

    <EditText
        android:id="@+id/editTextItemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_price_add_item"
        android:inputType="numberSigned|number|numberDecimal"
        android:textColor="#332847"
        android:textColorHint="@color/black"
        android:textCursorDrawable="@drawable/cursor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextItemName" />

    <EditText
        android:id="@+id/editTextItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:textColor="#332847"
        android:textColorHint="@color/black"
        android:textCursorDrawable="@drawable/cursor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewItemsDisplay" />

    <EditText
        android:id="@+id/editTextNumberOfItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_number_of_items"
        android:inputType="numberSigned"
        android:textColor="#332847"
        android:textColorHint="@color/black"
        android:textColorLink="@color/slightlyDarkerOrange"
        android:textCursorDrawable="@drawable/cursor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextItemDescription"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonSubmitAddition"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="284dp"
        android:backgroundTint="@color/whiteish"
        android:gravity="center"
        android:text="@string/add_item"
        android:textColor="#332847"
        android:textCursorDrawable="@drawable/cursor"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewItemsDisplay"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>